@@ -9,16 +9,7 @@
     </configurations>
   </component>
   <component name="ChangeListManager">
-    <list default="true" id="aae2efb2-7778-4cc3-ae20-bcb51cee43a1" name="Default Changelist" comment="">
-      <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/spl_compiler2.py" beforeDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/spl_interpreter.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/spl_interpreter.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/tpl_compiler.py" beforeDir="false" afterPath="$PROJECT_DIR$/bin/tpl_compiler.py" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/bin/tpl_compiler2.py" beforeDir="false" />
-      <change beforePath="$PROJECT_DIR$/doc/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/doc/changelog.txt" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tp/cmp.tp" beforeDir="false" afterPath="$PROJECT_DIR$/tp/cmp.tp" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/tp/cmp.tpc" beforeDir="false" afterPath="$PROJECT_DIR$/tp/cmp.tpc" afterDir="false" />
-    </list>
+    <list default="true" id="aae2efb2-7778-4cc3-ae20-bcb51cee43a1" name="Default Changelist" comment="" />
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
     <option name="HIGHLIGHT_NON_ACTIVE_CHANGELIST" value="false" />
@@ -278,22 +269,22 @@
       <screen x="0" y="0" width="1536" height="824" />
     </state>
     <state x="549" y="167" key="FileChooserDialogImpl/0.0.1536.824@0.0.1536.824" timestamp="1575950529941" />
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1576985062012">
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom" timestamp="1576985215585">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1576985062012" />
-    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1576985062012">
+    <state width="1493" height="210" key="GridCell.Tab.0.bottom/0.0.1536.824@0.0.1536.824" timestamp="1576985215585" />
+    <state width="1493" height="210" key="GridCell.Tab.0.center" timestamp="1576985215584">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1576985062012" />
-    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1576985062011">
+    <state width="1493" height="210" key="GridCell.Tab.0.center/0.0.1536.824@0.0.1536.824" timestamp="1576985215584" />
+    <state width="1493" height="210" key="GridCell.Tab.0.left" timestamp="1576985215584">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1576985062011" />
-    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1576985062012">
+    <state width="1493" height="210" key="GridCell.Tab.0.left/0.0.1536.824@0.0.1536.824" timestamp="1576985215584" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right" timestamp="1576985215584">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
-    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1576985062012" />
+    <state width="1493" height="210" key="GridCell.Tab.0.right/0.0.1536.824@0.0.1536.824" timestamp="1576985215584" />
     <state x="431" y="145" width="672" height="678" key="search.everywhere.popup" timestamp="1575928474552">
       <screen x="0" y="0" width="1536" height="824" />
     </state>
