@@ -1,3 +1,10 @@
+#### Build 1006 ####
+=== C vm ===
+
+Under Windows cmd:
+30 fib: 590 ms
+1m while loop: 150 ms
+
 #### Build 1004 ####
 === C vm ===
 
