@@ -1,3 +1,10 @@
+#### Build 1006 ####
+2019/12/21
+
+* VM performance optimization
+    * Replaced simple functions by macros
+    * Register
+
 #### Build 1005 ####
 2019/12/21
 
